# plumberlama

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cli.py  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.yml  exploration.ipynb  mkdocs.yml  pyproject.toml  query_db.py
docs/: .gitkeep  index.md  survey_documentation.md
docs/stylesheets/: extra.css
lib/src/lib/: database.py  doc.py  helpers.py  label_generation.py  processing.py  schema.py
scripts/: generate_api_models.py  query_db.py
src/plumberlama/: __init__.py  cli.py  config.py  documentation.py  generated_api_models.py  logging_config.py  main.py  parse_metadata.py  schemas.py  states.py  transitions.py  type_mapping.py  validation_schemas.py
src/plumberlama/extract/: question_type.py
src/plumberlama/io/: api.py  database.py  database_queries.py
src/plumberlama/transform/: cast_types.py  decode.py  llm.py  rename_results_columns.py  variable_naming.py
tests/: conftest.py  docker-compose.test.yml  test_question_types.py  test_variable_generation.py
tests/e2e/: test_etl_pipeline.py
tests/integration/: test_api_fetch_metadata.py  test_api_fetch_results.py  test_database_loading.py  test_documentation_from_db.py  test_documentation_hosting.py  test_metadata_processing.py  test_preload_check.py  test_self_service_analytics.py
tests/unit/: test_documentation.py  test_metadata_parsing.py  test_metadata_processing.py  test_preload_check.py  test_question_extraction.py  test_results_processing.py  test_type_mapping.py  test_variable_naming.py
