[project]
name = "lama-plumber"
version = "0.1.0"
description = "Pipeline to generate documentation for surveys and process and load results to a database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.0.3",
    "jupyter>=1.1.1",
    "polars>=1.33.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "lib",
    "rich>=14.1.0",
    "pytest>=8.4.2",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "duckdb>=1.1.0",
    "connectorx>=0.4.0",
    "click>=8.1.0",
    "pyarrow>=21.0.0",
]

[tool.uv.sources]
lib = { workspace = true }

[tool.uv.workspace]
members = ["lib"]